fix horizontal scroll issue for phone

--- a/style/_globals.scss
+++ b/style/_globals.scss
@@ -4,6 +4,11 @@
   padding: 0;
   box-sizing: border-box;
 }
+
+html {
+  overflow-x: hidden;
+}
+
 body {
   font-family: "Nunito", sans-serif;
   line-height: 2rem;
